Closed Bug 1908651 Opened 1 year ago Closed 1 year ago

Nested Strip on Share params that throw errors cause all parameters after to not be stripped

Categories

(Core :: Privacy: Anti-Tracking, defect)

defect

Tracking

()

RESOLVED FIXED
130 Branch
Tracking Status
firefox130 --- fixed

People

(Reporter: abhishekmadan, Assigned: abhishekmadan)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → amadan
Pushed by amadan@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6b045fc484cc Updated Nested Strip on Share checks to ensure if an error occurs, no necessary parameter is removed.r=pbz
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: