Bug 1908651 - Updated Nested Strip on Share checks to ensure if an error occurs, no necessary parameter is removed.r=pbz

Differential Revision: https://phabricator.services.mozilla.com/D217320